despliegues/despliegue v1/despliegue-auth-service-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-v1
  labels:
    app: auth-service
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
      version: v1
  template:
    metadata:
      labels:
        app: auth-service
        version: v1
    spec:
      containers:
      - name: auth-service
        image: evntual/auth-service:v1.0.0
        resources:
          limits:
            memory: 256Mi
            cpu: 500m
        ports:
          - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    app: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - name: http
      port: 5002
      targetPort: 5002
