despliegues/despliegue v1/despliegue-gateway-service-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service-v1
  labels:
    app: gateway-service
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway-service
      version: v1
  template:
    metadata:
      labels:
        app: gateway-service
        version: v1
    spec:
      containers:
      - name: gateway-service
        image: evntual/gateway-service:v1.0.0
        resources:
          limits:
            memory: 256Mi
            cpu: 500m
        ports:
          - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  labels:
    app: gateway-service
spec:
  selector:
    app: gateway-service
  ports:
    - name: http
      port: 5003
      targetPort: 5003
