despliegues/despliegue v1/despliegue-message-service-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-service-v1
  labels:
    app: message-service
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: message-service
      version: v1
  template:
    metadata:
      labels:
        app: message-service
        version: v1
    spec:
      containers:
      - name: message-service
        image: evntual/message-service:v1.0.0
        resources:
          limits:
            memory: 256Mi
            cpu: 500m
        ports:
          - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: message-service
  labels:
    app: message-service
spec:
  selector:
    app: message-service
  ports:
    - name: http
      port: 5000
      targetPort: 5000
