despliegues/despliegue v1/despliegue-mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: despliegue-mongodb
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo
        resources:
          limits:
            memory: 1000Mi
            cpu: 500m
        ports:
          - containerPort: 27017
        volumeMounts:
          - name: volumen-mongo
            mountPath: /data/db
      volumes:
        - name: volumen-mongo
          hostPath:
            path: /mnt
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: servicio-mongodb
  labels:
    app: mongodb
spec:
  selector:
    app: mongodb
  ports:
    - name: tcp-default
      port: 27017
      targetPort: 27017
