despliegues/despliegue v1/despliegue-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: despliegue-redis
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis
        resources:
          limits:
            memory: 500Mi
            cpu: 500m
        ports:
          - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: servicio-redis
  labels:
    app: redis
spec:
  selector:
    app: redis
  ports:
    - name: tcp-default
      port: 6379
      targetPort: 6379
