despliegues/despliegue v1/despliegue-user-service-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-v1
  labels:
    app: user-service
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
      version: v1
  template:
    metadata:
      labels:
        app: user-service
        version: v1
    spec:
      containers:
      - name: user-service
        image: evntual/user-service:v1.0.0
        resources:
          limits:
            memory: 256Mi
            cpu: 500m
        ports:
          - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  selector:
    app: user-service
  ports:
    - name: http
      port: 5001
      targetPort: 5001
