despliegues/despliegue v1/gateway-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway
  http:
    - match:
      - port: 80
      route:
        - destination:
            host: gateway-service
            port:
              number: 5003
